# RdkVlanBridgingManager

./: CONTRIBUTING.md  Makefile.am  NOTICE  README.md  cmpnt_build_custom_pre.mk  configure.ac  fix.patch
cfg/: Makefile.am
config/: RdkVlanManager.xml  vlan_manager_conf.json
hal_schema/: ethlinkvlanterm_hal_schema.json  example_getParameters.json  example_getParametersResponse.json  example_getSchemaResponse_msg.json  example_getSchema_msg.json  example_result_msg.json  example_setParameters.json
source/: Makefile.am
source/RdkVlanManager/: Makefile.am  ssp_action.c  ssp_global.h  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h
source/TR-181/: Makefile.am
source/TR-181/include/: ethernet_apis.h  vlan_apis.h
source/TR-181/middle_layer_src/: Makefile.am  ethernet_apis.c  ethernet_dml.c  ethernet_dml.h  ethernet_internal.c  ethernet_internal.h  plugin_main.c  plugin_main.h  plugin_main_apis.c  plugin_main_apis.h  vlan_apis.c  vlan_cfg_dml.c  vlan_cfg_dml.h  vlan_dml.c  vlan_dml.h  vlan_eth_hal.c  vlan_eth_hal.h  vlan_internal.c  vlan_internal.h  vlan_mgr_apis.h  vlan_mgr_apis_busutil.h  vlan_mgr_dml_api_common.h
